# openwit

./: .dockerignore  Cargo.toml  README.md  docker-compose.yml
config/: openwit-unified-control.yaml
src/openwit-cli/: Cargo.toml  README.md
src/openwit-cli/src/: main.rs  node_startup.rs
src/openwit-config/src/: unified_config_processing.rs
src/openwit-config/src/unified/: processing.rs
src/openwit-control-plane/: Cargo.toml
src/openwit-control-plane/src/: lib.rs  mandatory_node_checker.rs  surveillance.rs
src/openwit-grpc/: Cargo.toml
src/openwit-grpc/src/: batcher.rs  flush_pool.rs  grpc_server.rs  lib.rs  otlp_ingest_connector.rs  otlp_services.rs  wal.rs
src/openwit-http/: Cargo.toml
src/openwit-http/src/: control_plane_integration.rs  lib.rs  server.rs
src/openwit-inter-node/: Cargo.toml
src/openwit-inter-node/src/: lib.rs
src/openwit-janitor/: Cargo.toml
src/openwit-janitor/src/: leader_integration.rs
src/openwit-kafka/: Cargo.toml
src/openwit-kafka/src/: high_performance_consumer.rs  kafka_consumer.rs
src/openwit-search/: Cargo.toml
src/openwit_ingestion/: Cargo.toml
src/openwit_ingestion/src/: lib.rs
