[package]
name = "openwit-inter-node"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# gRPC and networking
tonic = { workspace = true }

# Arrow Flight for high-performance data transfer
arrow = { workspace = true }
arrow-flight = { workspace = true }

# Utilities
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true }
